MBS-6145: Fix layout problem

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
     left: 80px;
 }
 
-.mbs-floatingicons-icon a{
+.mbs-floatingicons-icon a, .mbs-floatingicons-icon button{
     border-radius: 100%;
     background: #00a8d5;
     padding: 4px;
@@ -34,13 +34,13 @@
     place-content: center; 
 }
 
-.mbs-floatingicons-icon a i{
+.mbs-floatingicons-icon a i, .mbs-floatingicons-icon button i{
     font-size: 25px;
     width: 100%;
     height: 100%;
 }
 
-.mbs-floatingicons-icon a:hover {
+.mbs-floatingicons-icon a:hover, .mbs-floatingicons-icon button:hover {
     transform: scale(1.1);
 }
 
